hub/cluster/cloud-cluster/pmos/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pmos-caddy
spec:
  selector:
    app: pmos-caddy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
