hub/cluster/cloud-cluster/pmos/gateway-smoketest.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pmos-smoketest
  annotations:
    infra.samcday.com/reconcile: "2"
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: pmos-gwtest.samcday.com
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pmos-smoketest
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - pmos-gwtest.samcday.com
  parentRefs:
    - name: pmos-smoketest
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pmos-caddy
          port: 80
